src/styles/Home.css
/* ... */
.fade-in {
  opacity: 1;
  transition: opacity 0.5s ease-in-out;
}

.fade-out {
  opacity: 0;
  transition: opacity 0.5s ease;
}

.fade-in-robo {
  opacity: 1;
  transition: opacity 0.5s ease-in-out;
}

.fade-out-robo {
  opacity: 0;
  transition: opacity 0.5s ease;
}

.books_jpg5{
  position:fixed;
  margin-left: 12% !important;
  margin-top: 18% !important;
  width:200px !important;
  border-radius:2px;
  visibility: hidden;

}

.calcifer_jpg1{
  margin-top:15% !important;
  position:fixed;
  margin-left: 33% !important;
  width: 22vw !important;
  border-radius:7px;
}

.cam_jpg3{
  position:fixed;
  margin-left: 24% !important;
  margin-top: 22% !important;
  width:200px !important;
  border-radius:2px;
  visibility: hidden;
}

.ceramic_jpg6{
  width:200px !important;
  margin-left: 40% !important;
  margin-top: 20% !important;
  border-radius:2px;
  position:fixed;
  visibility: hidden;
}

.me_jpg7{
  width:22vw !important;
  margin-left: 10% !important;
  margin-top: 5% !important;
  border-radius:7px;
  position:fixed;
}

.jpg41{
  width:140px !important;
  margin-left: 41% !important;
  margin-top: 180px !important;
  border-radius:2px;
  position:fixed;
}

.matcha_jpg2{
  width:200px !important;
  margin-left: 26% !important;
  margin-top: 4% !important;
  border-radius:2px;
  position:fixed;
  visibility: hidden;
}

.hike_mov{
  width:200px !important;
  margin-left: 65% !important;
  margin-top: 12% !important;
  border-radius:2px;
  position:fixed;
  
}

.maki{
  width:22vw !important;
  margin-left: 15% !important;
  margin-top: 150px !important;
  border-radius:5px;
  position:fixed;
}
.fireforce{
  width:22vw !important;
  margin-left: 39% !important;
  margin-top: 100px !important;
  border-radius:5px;
  position:fixed;
}
.frierenn{
  width: 17vw !important;
  margin-left: 4% !important;
  margin-top: 18px !important;
  border-radius:5px;
  position:fixed;
}

.book{
  width:25vw !important;
  margin-left: 20% !important;
  margin-top: 10px !important;
  border-radius:7px;
  position:fixed;
}


.about-title {
  justify-content: left;
  user-select: none;
  background-color: transparent;
  align-items: left;
  text-align:left;
  position: relative;
  font-family: 'Times Now Light';
  font-size: 1.8vw;
  width: 30vw;
  margin-bottom:20%;
}

.about-title-box {
  z-index: 0;
  margin-left:5%; 
  transform: translate(-5%);
  margin-bottom: 0px;
  background-color: transparent;
}

.hover-text {
  cursor: pointer;
  text-decoration: underline;
}

.hover-image {
  display: none;
  max-width: 300px; 
  margin-top: 10px;
}


@keyframes lineAnimation {
  0% {
    width: 0;
  }
  100% {
    width: 95%;
  }
}


.about-details {
  margin-top: 0px;
  font-family: 'Times Now ExtraLight';
  font-size: 13px;
  width:100%;
  color: black;
  text-align: justify;
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.fade-in-about-details{
  opacity: 1;
}

.about-details-container {
  display: flex;
  flex-direction: column;
  z-index: 1;
  margin-top:2%;
  position: relative;
  align-items: flex-start;
}

.about-details-bar {
  max-width: 2px;
  width:100%;
  background-color: black;
  margin-right: 10px;
}

.about-details-list {
  justify-content: flex-start;
  align-items: flex-start;
  display:flex;
  padding: 0;
  margin: 0;
  
  width:100%;
}

.about-details-list-item {
  display: flex;
  align-items: flex-start;
  margin-bottom: 10px;
  font-family: 'Times Now Bold';
  font-size: 13px;
  padding-right: 15px;
  opacity:0.5;
  border: none;
  background-color: transparent;
  cursor: pointer;
  position: relative;
  width: fit-content;
}

.experience-container {
  display: flex;
  flex-direction: column;
  max-width: 436px;
  width: 100%;
  align-items: center;
  text-align: justify;
  margin-top: 0;
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.fade-in-experience-container{
  opacity: 1;
}

.experience-list {
  display: flex;
  list-style-type: none;
  margin: 0;
  padding-left:0;
  flex-direction: row;
  padding-bottom: 12px;
  justify-content: flex-start;
  align-items: flex-start;
  width: 100%;
  margin-top: 0;
}

.experience-list-item {
  font-family: 'Times Now Light';
  margin-top: 0;
  opacity: 0.5;
  padding-top: 0;
  padding-right: 15px;
  font-size: 13px;
  color: black;
  border: none;
  background-color: transparent;
  cursor: pointer;
  transition: opacity 0.5s ease-in-out;
  position: relative;
  text-decoration: none;
}

.experience-details-container {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  text-align: left;
  width: 100%;
  opacity: 0;
  transition: opacity 0.5s ease-in-out;
}

.fade-in{
  opacity: 1;
}
.experience-details-title {
  margin-top: 0px;
  font-family: 'Times Now Bold';
  font-size: 13px;
  color: black;
  width: 100%;
  margin-bottom: 0;
  text-align: left;
}

.experience-details-date {
  margin-top: 0px;
  font-family: 'Times Now ExtraLight';
  font-size: 11px;
  color: black;
  width: 100%;
  text-align: left;
  margin-bottom: 15px;
}

.experience-details-item-container {
  list-style-type: disc;
  padding: 0;
  margin: 0;
  margin-top: 0;
  margin-left: 13px;
  margin-bottom: 10px;
}

.experience-detail-item {
  font-family: 'Times Now ExtraLight';
  font-size: 13px;
  color: black;
  margin-bottom: 3px;
}


.selected-experience {
  opacity:1;
}


.selected-about {
  opacity:1;
}

.site-from-scratch{
  font-family: 'Times Now ExtraLight';
  font-size: 13px;
  color: var(--main-color);
  bottom: 50px;
  left: 39px;
  margin-bottom: 0%;
  opacity: 0.5  ;
  position:fixed;
}

.home-details-container {
  width: 100vw;
  display: flex;
  overflow-y: hidden;
  overflow-x:hidden;
}


.home-details-inner {
  top: 6dvh;
  left: 50%;
  transform: translate(-50%);
  width: 100vw;
  flex-direction: row;
  display: flex;
  position: fixed;
  z-index: 0;
  opacity: 0;
  transition: opacity 2s ease-in-out;
  bottom: 6vh;
}
/* ... */

